fix gallery in dynamic stretchin & PTX

--- a/users/SongPham/cfyc/app/stylesheets/files/dynamicstretching-services.scss
+++ b/users/SongPham/cfyc/app/stylesheets/files/dynamicstretching-services.scss
@@ -464,4 +464,18 @@
             }
         }
     }
+       .carousel.slide.desktop {
+		display: block;
+		max-height: 450px;
+		overflow: hidden;
+		@media (max-width:767px) {
+			display: none;
+		}
+	}
+		.carousel.slide.mobile {
+		display: none;
+		@media (max-width:767px) {
+			display: block;
+		}
+	}
 }
