--- a/users/SongPham/cfyc/app/stylesheets/files/kickfit-mma-services.scss
+++ b/users/SongPham/cfyc/app/stylesheets/files/kickfit-mma-services.scss
@@ -465,6 +465,8 @@
     }
         	.carousel.slide.desktop {
 		display: block;
+		max-height: 450px;
+		overflow: hidden;
 		@media (max-width:767px) {
 			display: none;
 		}
