--- a/users/SongPham/cfyc/app/stylesheets/files/ptx-services.scss
+++ b/users/SongPham/cfyc/app/stylesheets/files/ptx-services.scss
@@ -465,4 +465,18 @@
             }
         }
     }
+           .carousel.slide.desktop {
+		display: block;
+		max-height: 450px;
+		overflow: hidden;
+		@media (max-width:767px) {
+			display: none;
+		}
+	}
+		.carousel.slide.mobile {
+		display: none;
+		@media (max-width:767px) {
+			display: block;
+		}
+	}
 }
